[tool.poetry]
name = "electronicservicebot"
version = "0.1.0"
description = ""
authors = ["Ivan Prilepsky <prilepskii.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
aiogram = "^3.10.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
