[tool.poetry]
name = "electronicservicebot"
version = "0.1.0"
description = ""
authors = ["Ivan Prilepsky <prilepskii.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
